--- a/partials/about.season-activities.partial.html
+++ b/partials/about.season-activities.partial.html
@@ -1,4 +1,5 @@
-<section class="season-activities container">
+<section class="season-activities">
+    <div class="container">
         <h2 class="season-activities__title">Season Activities</h2>
         <div class="season-activities__cards cards-up">
             <div class="cards-up__image-winter-container">
@@ -147,4 +148,5 @@
                 <img class="cards-low__image-summer" src="img/nature-summer.jpg" alt="there is a nature in summerg">
             </div>
         </div>
+    </div>
 </section>
