added id to reservation container

--- a/partials/index-form.html
+++ b/partials/index-form.html
@@ -1,4 +1,4 @@
-<div class="reservation-container">
+<div class="reservation-container" id="reservation-container">
     <section class="reservation">
         <h2 class="reservation-title">Make a reservation</h2>
         <p class="reservation-description">Please complete the form below</p>
