change question html

--- a/partials/index.answer-for-question.partial.html
+++ b/partials/index.answer-for-question.partial.html
@@ -2,6 +2,6 @@
     <h2 class="answer-for-question__title">Get full answer for your question</h2>
     <div class="answer-for-question__buttons">
         <button>CALL US</button>
-        <a href="#">RESERVATION</a>
+        <a href="#reservation-container">RESERVATION</a>
     </div>
 </section>
