--- a/partials/gallery-main-our-guests.html
+++ b/partials/gallery-main-our-guests.html
@@ -1,28 +1,34 @@
-<section class="gallery_carousel">
-    <h2 class="gallery_carousel__title">Our guests</h2>
-    <div class="gallery_carousel__body">
-        <ul>
-            <li>
-                <img src="img/gallery-carousel/galery_carousel-1.jpeg" alt="gallery carousel photo">
-            </li>
-            <li>
-                <img src="img/gallery-carousel/galery_carousel-2.jpeg" alt="gallery carousel photo"> 
-            </li>
-            <li>
-                <img src="img/gallery-carousel/galery_carousel-3.jpeg" alt="gallery carousel photo">
-            </li>
-            <li>
-                <img src="img/gallery-carousel/galery_carousel-4.jpeg" alt="gallery carousel photo">
-            </li>
-            <li>
-                <img src="img/gallery-carousel/galery_carousel-5.jpeg" alt="gallery carousel photo">
-            </li>
-            <li>
-                <img src="img/gallery-carousel/galery_carousel-6.jpeg" alt="gallery carousel photo">
-            </li>
-            <li>
-                <img src="img/gallery-carousel/galery_carousel-7.jpeg" alt="gallery carousel photo">
-            </li>
-        </ul>
+<section>
+    <div class="gallery_carousel">
+        <h2 class="gallery_carousel-tags">Our guests </h2>
+        <div class="gallery_sl" data-slider="gallery_sl" data-loop="true" data-autoplay="false">
+            <div class="gallery_sl-wrapper">
+                <div class="gallery_sl-items">
+                    <div class="gallery_sl-item">
+                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-1.jpeg" alt="Working">
+                    </div>
+                    <div class="gallery_sl-item">
+                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-2.jpeg" alt="Working">
+                    </div>
+                    <div class="gallery_sl-item">
+                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-3.jpeg" alt="Working">
+                    </div>
+                    <div class="gallery_sl-item">
+                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-4.jpeg" alt="Working">
+                    </div>
+                    <div class="gallery_sl-item">
+                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-6.jpeg" alt="Working">
+                    </div>
+                    <div class="gallery_sl-item">
+                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-7.jpeg" alt="Working">
+                    </div>
+                    <div class="gallery_sl-item">
+                        <img class="gallery_carousel-img" src="img/gallery-carousel/galery_carousel-1.jpeg" alt="Working">
+                    </div>
+                </div>
+            </div>
+            <button class="gallery_sl-btn gallery_sl-btn-prev"></button>
+            <button class="gallery_sl-btn gallery_sl-btn-next"></button>
+        </div>
     </div>
 </section>
