--- a/css/policies.rental-policies.css
+++ b/css/policies.rental-policies.css
@@ -1,18 +1,24 @@
 .container {
     margin: auto;
-    max-width: 352px;
+    max-width: 720px;
     display: block;
     overflow-x: hidden;
+}
+.block__rental-policies{
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 50px;
 }
 .rental-policies{
     font-family: var(--description-font-family);
     font-weight: 400;
     line-height: 25px;
-    padding: 80px 5px 0;
-    background-image: url(../img/about-background-image-gray.jpg);
+    padding: 0 24px;
+    background-image: url(../img/policies-background-image-grey.jpg);
 }
 
 .rental-policies__title {
+    padding-top: 50px;
     font-size: 34px;
     font-weight: 500;
     text-align: center;
@@ -23,10 +29,10 @@
     font-size: 19px;
     text-align: center;
     margin-bottom: 7px;
+    max-width: 100%;
 }
 
 .rental-policies__name-phone {
-    max-width: 352px;
     font-size: 19px;
     display: flex;
     flex-wrap: wrap;
@@ -40,31 +46,31 @@
 
 .name-phone__personal-phone {
     color: var(--icons-color);
+    text-align: center;
 }
-
-.name-phone__personal-name {
+.rental-policies__items{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
-
 .rental-policies__items-item {
-    max-width: 352px;
+    max-width: 600px;
     display: flex;
-    justify-content: space-between;
-    gap: 8px;
+    justify-content: center;
+    gap: 20px;
     margin-bottom: 33px;
 }
 
 .rental-policies__items-item:last-child {
-    padding-bottom: 80px;
+    padding-bottom: 33px;
     margin-bottom: 0;
 }
 
 .item__description-title {
     font-size: 18px;
     font-weight: 500;
-    margin-bottom: 21px;
+    margin-bottom: 15px;
 }
 
 .item__description-subtitle {
@@ -72,9 +78,9 @@
 }
 
 .item__image-container {
-    width: 50px;
+    min-width: 50px;
     height: 50px;
-    background-color: rgb(252, 213, 213);
+    background-color: var(--background-color);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -87,25 +93,20 @@
     height: 26px;
 }
 .item__description{
-    max-width: 272px;
+    max-width: 640px;
 }
 .description-subtitle-space {
     margin-bottom: 32px;
 }
-/* @media (min-width:401px){
+@media (min-width:768px){
     .rental-policies {
         padding: 0 32px;
     }
-    .container{
-        margin: auto;
-        max-width: 740px;
-        display: block;
-        overflow-x: hidden;
-    }
-}
-@media (min-width:801px){
-    .rental-policies {
-        padding: 0 15px;
+    .rental-policies__items{
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-between;
     }
     .container{
         margin: auto;
@@ -113,4 +114,20 @@
         display: block;    
         overflow-x: hidden;
     }
-} */
+    .block__rental-policies{
+        display: flex;
+        flex-direction: row;
+        gap: 30px;
+    }
+    .rental-policies__items-item{
+        /* max-width: 525px; */
+    }
+    .item__image-container {
+        min-width: 70px;
+        max-width: 70px;
+        height: 70px;
+    }
+    .item__description{
+        max-width: 480px;
+    }
+}
