--- a/css/gallery-main-seasons.css
+++ b/css/gallery-main-seasons.css
@@ -1,51 +1,27 @@
-.gallery-picture_header {
-  padding: 5px;
+.gallery-picture_of_places_in_different_seasons {
+  background-image: url("../img/gallery_seasons_background.jpg");
 }
-
-.gallery-picture_title {
+.gallery-picture_title { 
   text-align: center;
-  padding-top: 83px;
-  font-size: 2.5rem;
-  font-weight: 500;
+  padding: 40px;
+  font-size: 44px;
+  color: var(--text-color);
+  font-family: var(--title-font-family);
 }
-
-.list-seasons-name {
+.list-seasons-name{
   display: flex;
   flex-direction: column;
-  padding: 15px 20px;
+  padding: 30px 20px;
   font-size: 1.2rem;
   align-items: center;
 }
-
-.list-seasons-name .list_item {
-  color: var(--description-color);
+.list-seasons-name .list_item{
+  color:var(--description-color);
   text-decoration: none;
 }
-
-.list-seasons-name .list_item:hover {
+.list-seasons-name .list_item:hover{
   color: var(--text-color);
   text-decoration: underline;
-}
-
-@media (min-width: 500px) {
-  .list-seasons-name {
-    flex: 1;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-  }
-}
-
-.gallery-picture__summer,
-.gallery-picture__winter,
-.gallery-picture__spring,
-.gallery-picture__autumn,
-.gallery-picture__fishing,
-.gallery-picture__spa {
-  background-image: url(../img/gallery_seasons_background.jpg);
-  min-height: 1000px;
-  background-size: cover;
-  background-position: center;
 }
 
 ul {
@@ -53,41 +29,123 @@ ul {
   justify-content: center;
   list-style-type: none;
 }
-
 li {
   margin: 0 10px;
 }
 
-.img-line,
-.picture-summer_house-on-the-mountain,
-.picture-summer_horse,
-.picture-summer_lake,
-.picture-summer_house-interior,
-.picture-summer_house-in-the-forest,
-.picture-summer_house-with-flowers,
-.picture-winter_mountains,
-.picture-winter_skier,
-.picture-winter_girl-with-coffee,
-.picture-winter_house-by-the-lake,
-.picture-winter_horse,
-.picture-winter_houses-in-the-mountains,
-.picture-spring_house-on-the-mountain,
-.picture-spring_house-near-the-lake,
-.picture-spring_hous-in-the-forest,
-.picture-autumn_gray-house,
-.picture-autumn_house-in-the-forest,
-.picture-autumn_girl-near-the-house,
-.picture-fishing_fisherman,
-.picture-fishing_wooden-boat,
-.picture-fishing_red-boat,
-.picture-spa_window,
-.picture-spa_bath,
-.picture-spa_terrace {
-  display: block;
-  margin: 0 auto;
-  max-width: 500px;
-  min-height: 250px;
+@media (min-width:500px) {
+  .list-seasons-name{
+    flex: 0;
+    flex-direction: row;
+    align-items: center;
+    
+  }
+  *,
+  *::after,
+  *::before {
+    margin: 8px;
+    padding: 0;
+    box-sizing:  border-box;
+  }
+  .gallery-picture_seasons {
+    width: 60%;
+    margin: 2rem auto; 
+  }
+  
+  .block_summer,
+  .block_winter {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr) auto auto;
+    grid-template-rows:  repeat(12, 5vw) auto auto;
+    margin: 2rem auto; 
+    grid-gap: 1.5rem;
+    
+  }
+  .block_spring,
+  .block_autumn,
+  .block_fishing,
+  .block_spa {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr) auto auto;
+    grid-template-rows:  repeat(6, 5vw) auto auto;
+    margin: 2rem auto; 
+    grid-gap: 1.5rem;
+  }
+.gallery_img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block; 
   border-radius: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
 }
+.picture-summer_house-on-the-mountain,
+.winter-mountains {
+  grid-column-start: 1;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 7;
+}
+.picture-summer_horse,
+.picture-winter_skier {
+  grid-column-start: 9;
+  grid-column-end: 13;
+  grid-row-start: 1;
+  grid-row-end: 4;
+}
+.picture-summer_lake,
+.picture-winter_girl-with-coffee {
+  grid-column-start: 9;
+  grid-column-end: 13;
+  grid-row-start: 4;
+  grid-row-end: 7;
+}
+.picture-summer_house-interior,
+.picture-winter_house-by-the-lake {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 7;
+  grid-row-end: 10;
+}
+.picture-summer_house-in-the-forest,
+.picture-winter_horse {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 10;
+  grid-row-end: 13;
+}
+.picture-summer_house-with-flowers,
+.picture-winter_houses-in-the-mountains {
+  grid-column-start: 5;
+  grid-column-end: 13;
+  grid-row-start: 7;
+  grid-row-end: 13;
+}
+.picture-spring_house-on-the-mountain,
+.picture-autumn_gray-house,
+.picture-fishing_fisherman,
+.picture-spa_window {
+  grid-column-start: 1;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 7;
+}
+.picture-spring_house-near-the-lake,
+.picture-autumn_house-in-the-forest,
+.picture-fishing_wooden-boat,
+.picture-spa_bath {
+  grid-column-start: 9;
+  grid-column-end: 13;
+  grid-row-start: 1;
+  grid-row-end: 4;
+}
+.picture-spring_hous-in-the-forest,
+.picture-autumn_girl-near-the-house,
+.picture-fishing_red-boat,
+.picture-spa_terrace {
+  grid-column-start: 9;
+  grid-column-end: 13;
+  grid-row-start: 4;
+  grid-row-end: 7;
+}
+}
+
