--- a/css/gallery.css
+++ b/css/gallery.css
@@ -2,3 +2,4 @@
 @import url(header.css); 
 @import url(gallery-main-seasons.css); 
 @import url(gallery-main-carousel.css);
+@import url(footer.css);
