--- a/css/offer.css
+++ b/css/offer.css
@@ -1,4 +1,5 @@
 @import url(global.css);
 @import url(header.css);
 @import url(offer-main-cabin-rentals.css);
-@import url(form.css)
+@import url(form.css);
+@import url(footer.css);
