--- a/partials/footer.html
+++ b/partials/footer.html
@@ -7,26 +7,27 @@
 
     <div class="footer__links">
         <ul class="footer__links-list">
-            <li class="footer__link-item">
+            <li class="footer__link-item" id="footer__link-item-bold">
                 <a href="about.html" class="footer__link">About</a>
-            </li>
-            <li class="footer__link-item">
                 <a href="policies.html" class="footer__link">Rental policies</a>
             </li>
+            <br>
             <li class="footer__link-item">
                 <a href="gallery.html" class="footer__link">Photos</a>
-            </li>
-            <li class="footer__link-item">
                 <a href="contact.html" class="footer__link">How to get there</a>
             </li>
+            <br>
             <li class="footer__link-item">
                 <a href="about.html" class="footer__link">Accommodation</a>
             </li>
         </ul>
     </div>
 
+    <div class="footer__social-heading">
+        <p class="footer__social-heading-text">Follow Us</p>
+    </div>
+
     <div class="footer__social">
-        <p class="footer__social-heading">Follow Us</p>
         <ul class="footer__social-list">
             <li class="footer__social-item">
                 <a href="https://facebook.com" class="footer__social-link">
@@ -52,7 +53,7 @@
     </div>
 
     <div class="footer__ending">
-        <p class="footer__ending-text">Created by</p>
+        <p class="footer__ending-text">© Created by</p>
         <p class="footer__ending-text">All rights Reserved</p>
     </div>
     
