added some minor css changes

--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -1,8 +1,8 @@
 <main>
-    <h2>Cabin Rentals</h2>
-    <section class="Cabin-ofers">
+    <h2 class="cabin-ofers-title">Cabin Rentals</h2>
+    <section class="cabin-ofers">
         <div class="river-chalet-ofer">
-            <img src="img/river-chalet-ofer.jpg" alt="river chalet photo">
+            <img src="img/river-chalet-ofer.jpg" alt="river chalet photo" class="cabin-ofers-image">
             <article class="river-chalet-ofer-content">
                 <h3><span class="house-ofer-price">$65</span> /a night</h3>
                 <p>River Chalet</p>
@@ -23,7 +23,7 @@
             </article>
         </div>
         <div class="lookout-lodge-ofer">
-            <img src="img/lookout-lodge-ofer.jpg" alt="Lookout Lodge photo">
+            <img src="img/lookout-lodge-ofer.jpg" alt="Lookout Lodge photo" class="cabin-ofers-image">
             <article class="lookout-lodge-ofer-content">
                 <h3><span class="house-ofer-price">$75</span> /a night</h3>
                 <p>Lookout Lodge</p>
@@ -44,7 +44,7 @@
             </article>
         </div>
         <div class="smoky-view-chalet-ofer">
-            <img src="img/smoky-view-chalet-ofer.jpg" alt="Smoky View Chalet photo">
+            <img src="img/smoky-view-chalet-ofer.jpg" alt="Smoky View Chalet photo" class="cabin-ofers-image">
             <article class="smoky-view-chalet-ofer-content">
                 <h3><span class="house-ofer-price">$75</span> /a night</h3>
                 <p>Lookout Lodge</p>
@@ -65,7 +65,7 @@
             </article>
         </div>
         <div class="mountain-haven-ofer">
-            <img src="img/mountain-haven-ofer.jpg" alt="Mountain Haven photo">
+            <img src="img/mountain-haven-ofer.jpg" alt="Mountain Haven photo" class="cabin-ofers-image">
             <article class="mountain-haven-ofer-content">
                 <h3><span class="house-ofer-price">$100</span> /a night</h3>
                 <p>Lookout Lodge</p>
@@ -86,7 +86,7 @@
             </article>
         </div>
         <div class="mountain-splash-ofer">
-            <img src="img/mountain-splash-ofer.jpg" alt="Mountain Splash photo">
+            <img src="img/mountain-splash-ofer.jpg" alt="Mountain Splash photo" class="cabin-ofers-image">
             <article class="mountain-splash-ofer-content">
                 <h3><span class="house-ofer-price">$100</span> /a night</h3>
                 <p>Lookout Lodge</p>
