--- a/css/offer-main-cabin-rentals.css
+++ b/css/offer-main-cabin-rentals.css
@@ -1,1 +1,11 @@
-
+.cabin-ofers-title{
+    display: flex;
+    justify-content: center;
+    font-family: var(--title-font-family);
+    font-size: 35px;
+    font-weight: bolder;
+    margin-bottom: 50px;
+}
+.house-ofer-price{
+    color:var(--icons-color);
+}
