updated testimonials and shop

--- a/partials/testimonials.partial.html
+++ b/partials/testimonials.partial.html
@@ -4,7 +4,7 @@
         <img width="330" class="testimonials__image" src="img/little-girl-kissing-horse.jpg" alt="Little girl kissing horse">
         <img width="330" class="testimonials__image" src="img/kayaking.jpg" alt="Kayaking">
         <img width="330" class="testimonials__image" src="img/scenery.jpg" alt="Scenery">
-        <img width="330" class="testimonials__image" src="img/big lake.jpg" alt="Big lake">
+        <img width="330" class="testimonials__image" src="img/big-lake.jpg" alt="Big lake">
         <img width="330" class="testimonials__image" src="img/skiing.jpg" alt="Skiing">
     </div>
 
