--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -3,7 +3,7 @@
     <section class="cabin-ofers">
         <div class="river-chalet-ofer">
             <img src="img/river-chalet-ofer.jpg" alt="river chalet photo" class="cabin-ofers-image">
-            <article class="river-chalet-ofer-content">
+            <article class="ofer-content">
                 <h3><span class="house-ofer-price">$65</span> /a night</h3>
                 <p>River Chalet</p>
                 <ul class="house-ofer-rooms">
@@ -17,14 +17,14 @@
                     <p>Fireplace</p>
                     <p>Wi-Fi</p>
                 </div>
-                <a href="#reservation-form">
+                <a class="cabin-ofers-reserve-cabin-button" href="#reservation-form">
                     RESERVE CABIN
                 </a>
             </article>
         </div>
         <div class="lookout-lodge-ofer">
             <img src="img/lookout-lodge-ofer.jpg" alt="Lookout Lodge photo" class="cabin-ofers-image">
-            <article class="lookout-lodge-ofer-content">
+            <article class="ofer-content">
                 <h3><span class="house-ofer-price">$75</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
@@ -38,14 +38,14 @@
                     <p>Jacuzzi Tub</p>
                     <p>Wi-Fi</p>
                 </div>
-                <a href="#reservation-form">
+                <a class="cabin-ofers-reserve-cabin-button" href="#reservation-form">
                     RESERVE CABIN
                 </a>
             </article>
         </div>
         <div class="smoky-view-chalet-ofer">
             <img src="img/smoky-view-chalet-ofer.jpg" alt="Smoky View Chalet photo" class="cabin-ofers-image">
-            <article class="smoky-view-chalet-ofer-content">
+            <article class="ofer-content">
                 <h3><span class="house-ofer-price">$75</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
@@ -59,14 +59,14 @@
                     <p>Fireplace</p>
                     <p>Wi-Fi</p>
                 </div>
-                <a href="#reservation-form">
+                <a class="cabin-ofers-reserve-cabin-button" href="#reservation-form">
                     RESERVE CABIN
                 </a>
             </article>
         </div>
         <div class="mountain-haven-ofer">
             <img src="img/mountain-haven-ofer.jpg" alt="Mountain Haven photo" class="cabin-ofers-image">
-            <article class="mountain-haven-ofer-content">
+            <article class="ofer-content">
                 <h3><span class="house-ofer-price">$100</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
@@ -80,7 +80,7 @@
                     <p>Grill</p>
                     <p>Wi-Fi</p>
                 </div>
-                <a href="#reservation-form">
+                <a class="cabin-ofers-reserve-cabin-button" href="#reservation-form">
                     RESERVE CABIN
                 </a>
             </article>
@@ -101,7 +101,7 @@
                     <p>Hot Tub</p>
                     <p>Air Hockey</p>
                 </div>
-                <a href="#reservation-form">
+                <a class="cabin-ofers-reserve-cabin-button" href="#reservation-form">
                     RESERVE CABIN
                 </a>
             </article>
