--- a/css/footer.css
+++ b/css/footer.css
@@ -2,9 +2,10 @@
     color: var(--text-color);
     font-family: var(--description-font-family);
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     margin: 25px;
+    white-space: nowrap;
 }
 
 .footer__ending p {
@@ -54,6 +55,7 @@
     font-size: 1.375rem;
     font-weight: bold;
     margin: 25px;
+    white-space: nowrap;
 }
 
 .footer__social-list {
@@ -62,6 +64,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .footer__ending {
@@ -84,6 +87,10 @@
     padding: 5px;
 }
 
+.footer__link-item {
+    align-items: flex-start;
+}
+
 @media (min-width: 768px) {
     .footer__main {
         display: flex;
@@ -91,7 +98,6 @@
 
     .footer__logo {
         justify-content: center;
-        outline: solid;
         flex: 1;
     }
 
@@ -99,7 +105,6 @@
         justify-content: center;
         display: flex;
         flex: 3;
-        outline: solid;
     }
 
     .footer__links-list {
@@ -111,7 +116,6 @@
         display: flex;
         flex: 1;
         flex-direction: column;
-        outline: solid;
     }
 
     .footer__ending {
@@ -136,10 +140,4 @@
         flex: 3;
     }
 
-}
-
-@media (max-width: 840) {
-    .footer__logo img {
-        width: 80%;
-    }
 }
