--- a/partials/header.partial.html
+++ b/partials/header.partial.html
@@ -24,8 +24,10 @@
       </li>
     </ul>
     <div class="header__info">
-      <p class="header__location">Yosemite Mariposa</p>
-      <p class="header__location">County, Ca, USA</p>
+      <div class="header__location">
+        <p>Yosemite Mariposa</p>
+        <p>County, Ca, USA</p>
+      </div>
       <div class="header__contact">
         <a href="tel:+1(234)5678900" class="header__contact-link">+1 (234) 567 89 00</a>
         <a href="tel:+1(234)5678901" class="header__contact-link">+1 (234) 567 89 01</a>
