Changed things to do CSS part

--- a/css/global.css
+++ b/css/global.css
@@ -26,6 +26,10 @@
      font-family: 'Circular Std', serif;
      scroll-behavior: smooth;
  }
+ .body {
+    max-width: 1024px;
+    margin: auto;
+ }
 
  img {
      display: block;
