--- a/css/global.css
+++ b/css/global.css
@@ -20,6 +20,7 @@
      --background-color: #ffffff;
      --fields-border-color: #d0d0d0;
      --description-color: #848484;
+     --rentals-description-color: #bdbdbd;
      --fields-background-color: #f5f5f5;
      --title-font-family: 'Circular Std', serif;
      --description-font-family: 'Roboto', sans-serif;
