--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 @import url(global.css);
 @import url(header.css);
 @import url(call-form.css);
+@import url(cabin-rentals.css);
 @import url(index.things-to-do.css);
 @import url(index.adventure.css);
 @import url(index.answer-for-question.css);
