--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -1,4 +1,4 @@
-<main>
+<section>
     <h2 class="cabin-ofers-title">Cabin Rentals</h2>
     <section class="cabin-ofers">
         <div class="river-chalet-ofer">
@@ -127,4 +127,4 @@
             </form>
         </section>
     </div>
-</main>
+</section>
