--- a/css/index.adventure.css
+++ b/css/index.adventure.css
@@ -46,15 +46,18 @@
     padding: 20px;
 }
 
+/*
 img {
     min-height: 199px;
     min-width: 309px;
     border-radius: 5%;
     margin: 0 auto;
 }
-
+*/
+/*
 h3 {
     text-align: center;
     margin-top: 20px;
     width: 309px;
 }
+*/
