--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -1,7 +1,7 @@
 <section>
     <h2 class="cabin-ofers-title">Cabin Rentals</h2>
     <section class="cabin-ofers">
-        <div class="river-chalet-ofer">
+        <div class="cabin-ofer">
             <img src="img/river-chalet-ofer.jpg" alt="river chalet photo" class="cabin-ofers-image">
             <article class="ofer-content">
                 <h3><span class="house-ofer-price">$65</span> /a night</h3>
@@ -22,7 +22,7 @@
                 </a>
             </article>
         </div>
-        <div class="lookout-lodge-ofer">
+        <div class="cabin-ofer">
             <img src="img/lookout-lodge-ofer.jpg" alt="Lookout Lodge photo" class="cabin-ofers-image">
             <article class="ofer-content">
                 <h3><span class="house-ofer-price">$75</span> /a night</h3>
@@ -43,10 +43,10 @@
                 </a>
             </article>
         </div>
-        <div class="smoky-view-chalet-ofer">
+        <div class="cabin-ofer">
             <img src="img/smoky-view-chalet-ofer.jpg" alt="Smoky View Chalet photo" class="cabin-ofers-image">
             <article class="ofer-content">
-                <h3><span class="house-ofer-price">$75</span> /a night</h3>
+                <h3><span class="house-ofer-price">$85</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
                     <li>2 Bedrooms</li>
@@ -64,7 +64,7 @@
                 </a>
             </article>
         </div>
-        <div class="mountain-haven-ofer">
+        <div class="cabin-ofer">
             <img src="img/mountain-haven-ofer.jpg" alt="Mountain Haven photo" class="cabin-ofers-image">
             <article class="ofer-content">
                 <h3><span class="house-ofer-price">$100</span> /a night</h3>
@@ -85,7 +85,7 @@
                 </a>
             </article>
         </div>
-        <div class="mountain-splash-ofer">
+        <div class="cabin-ofer">
             <img src="img/mountain-splash-ofer.jpg" alt="Mountain Splash photo" class="cabin-ofers-image">
             <article class="mountain-splash-ofer-content">
                 <h3><span class="house-ofer-price">$100</span> /a night</h3>
