fixed some bugs and added some more css

--- a/partials/offer-main.html
+++ b/partials/offer-main.html
@@ -87,8 +87,8 @@
         </div>
         <div class="cabin-ofer">
             <img src="img/mountain-splash-ofer.jpg" alt="Mountain Splash photo" class="cabin-ofers-image">
-            <article class="mountain-splash-ofer-content">
-                <h3><span class="house-ofer-price">$100</span> /a night</h3>
+            <article class="ofer-content">
+                <h3><span class="house-ofer-price">$150</span> /a night</h3>
                 <p>Lookout Lodge</p>
                 <ul class="house-ofer-rooms">
                     <li>3 Bedrooms</li>
