--- a/css/offer-main-cabin-rentals.css
+++ b/css/offer-main-cabin-rentals.css
@@ -44,4 +44,12 @@ h3{
         display: flex;
         flex-direction: row;
     }
+    .cabin-ofers-reserve-cabin-button{
+        height: 50px;
+    }
+}
+@media (min-width:781px) {
+    .cabin-ofers-reserve-cabin-button{
+        height: 40px;
+    }
 }
